2000-05-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SPECIALIZE): Avoid a useless `indir'.
	(AC_CHECK_MEMBER, AC_CHECK_MEMBERS): Fix to work properly on
	`struct f.g.h'.
	* acspecific.m4 (AC_FUNC_GETLOADAVG): Use AC_CHECK_HEADERS and
	AC_CHECK_MEMBERS instead of performing their task by hand.

2000-05-19  Akim Demaille  <akim@epita.fr>

	Synchronize AC_FUNC_GETLOADAVG with the version of the shellutils
	1.16f (serial 4).

	* acspecific.m4 (AC_FUNC_GETLOADAVG): Check for
	`pstat_getdynamic'.
	Define `C_GETLOADAVG' if compiling `getloadavg.c'.
	Check for NLS.
	Compute `GETLOADAVG_LIBS'.
	(AC_FUNC_MKTIME): Remove a forgotten `AC_SUBST(LIBOBJS)'.

2000-05-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SHELL_UNSET, AC_SHELL_UNSETENV): New macro.
	(_AC_INIT_PREPARE_ENVIRONMENT): Use AC_SHELL_UNSETENV.
	Set CDPATH.  Fixes Autoconf/96.

	* doc/autoconf.texi (Special Shell Variables): New node.
	Document `status', `CDPATH', `LANG', `LC_ALL', `LC_MESSAGES' and
	`LC_CTYPE'.

2000-05-12  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (sinclude): Define, some packages (binutils) need
	it.

2000-05-12  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Invoking config.status): Move the
	documentation of the envvar CONFIG_(FILES, HEADERS, COMMANDS,
	LINKS) to
	(Obsolete config.status Use): here.

2000-05-12  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Exiting from Shell Scripts): New node.
	(Autoconf Language): Follow the advice in the new node.

2000-05-12  Peter Eisentraut  <peter_e@gmx.net>

	* doc/autoconf.texi: Fix typos.

2000-05-11  Akim Demaille  <akim@epita.fr>

	AC_CONFIG_SUBDIRS needs two lists: one, ac_subdirs_all, which
	contains all the possible subdirs for `--help=recursive', and
	another, `subdirs' which can be built dynamically for launching
	sub configurations.

	* acgeneral.m4 	(AC_CONFIG_SUBDIRS): Define `subdirs' dynamically.
	Define `ac_subdirs_all' statically.
	Warn if the argument is not a literal.