@@ -1,5 +1,11 @@
 2000-05-19  Akim Demaille  <akim@epita.fr>
 
+	* acspecific.m4 (_AC_LIBOBJ_GETLOADAVG): New macro, extracted from
+	(AC_FUNC_GETLOADAVG): here.
+	Use it.
+
+2000-05-19  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (AC_SPECIALIZE): Avoid a useless `indir'.
 	(AC_CHECK_MEMBER, AC_CHECK_MEMBERS): Fix to work properly on
 	`struct f.g.h'.
